update: add nav bar to every pages.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,13 +1,11 @@
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
-  color: #00B7FF;
+    color: #00B7FF;
+    text-decoration: none;
 }
 
-#loginSection, #registerSection {
-  margin: auto;
-  width: 450px;
-}
+#loginSection, #registerSection {margin: auto; width: 450px;}
