--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,37 +1,5 @@
-<!DOCTYPE html>
-<html lang="zh_CN">
-<head>
-  <title><%= title %></title>
-  <meta charset="utf-8">
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
+<% include commons/header %>
 
-<header>
-  <h1><%= title %></h1>
-  <p>Welcome to <%= title %></p>
-</header>
+<h3>url: <%= url %></h3>
 
-<nav>
-  <ul>
-    <li><button class="linkButton" id="login">Login</button></li>
-    <li><button class="linkButton" id="register">Register</button></li>
-    <li><button class="linkbutton" id="logout">Logout</button></li>
-  </ul>
-</nav>
-
-<main>
-  <section>
-    <p>user: <%= username %></p>
-    <p>visit count: <%= count %></p>
-  </section>
-</main>
-
-<footer>
-  <p>&copy; 2015</p>
-</footer>
-
-<script src="/javascripts/sso.js"></script>
-</body>
-</html>
-
+<% include commons/footer %>
