--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -9,3 +9,16 @@ a {
 }
 
 #loginSection, #registerSection {margin: auto; width: 450px;}
+
+#message-panple {
+    position: fixed;
+    top: 20px;
+    right: 10px;
+    width: 275px;
+    background-color: coral;
+}
+
+#clientForm {
+    padding: 30px;
+    margin: 30px 0;
+}
