--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,15 +1,53 @@
-body {
-    padding: 50px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-a {
-    color: #00B7FF;
+#w960 {
+    width: 960px;
+    margin: 0 auto;
+}
+
+/*导航栏*/
+.top-nav {
+    position: fixed;
+    background-color: #555;
+    width: 960px;
+    top: 0;
+    overflow: hidden;
+}
+.top-nav ul {
+    list-style-type: none;
+    overflow: hidden;
+}
+.top-nav ul li {
+    float: left;
+}
+.top-nav ul li a {
     text-decoration: none;
+    color: white;
+    display: inline-block;
+    padding: 12px 18px;
+    border-left: 1px solid #bbb;
+}
+.top-nav ul li a:not(.active):hover {
+    background-color: #111;
+}
+.top-nav .active {
+    background-color: #4CAF50;
+}
+.top-nav ul .float-right {
+    float: right;
+}
+main {
+    /*margin-top: 46px; !*露出nav固定的距离*!*/
+    padding-top: 46px;
 }
 
+/*登录,注册表单*/
 #loginSection, #registerSection {margin: auto; width: 450px;}
 
+/*消息面板*/
 #message-panple {
     position: fixed;
     top: 20px;
@@ -17,8 +55,21 @@ a {
     width: 275px;
     background-color: coral;
 }
-
 #clientForm {
     padding: 30px;
     margin: 30px 0;
 }
+
+/*信息面板*/
+#reqInfoSection {
+    border: 1px solid black;
+    padding: 10px 3px 2px 15px;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
+
+
+
+
+
